MODCLUSTER-539 Support JDK9 build 9-ea+139